--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,42 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-ocean {
+    background-image: url(../assets/background.gif);
+    background-repeat: no-repeat;
+    background-size: 100% calc(100% - 14rem);
+    background-position: bottom;
+}
+.motion-drop-0{
+    offset-path: path('M 0,30 C 110,0 10,-0 70,200');
+    animation: move 200ms forwards alternate ease-in-out;
+    width: 40px;
+    height: 40px;
+}
+.motion-drop-1{
+    offset-path: path('M 0,30 C 110,0 10,-0 150,200');
+    animation: move 200ms forwards alternate ease-in-out;
+    width: 40px;
+    height: 40px;
+}
+.motion-drop-2{
+    offset-path: path('M 0,30 C -110,0 -10,-0 -150,200');
+    animation: move 200ms forwards alternate ease-in-out;
+    width: 40px;
+    height: 40px;
+}
+.motion-drop-3{
+    offset-path: path('M 0,30 C -110,0 -10,-0 -70,200');
+    animation: move 200ms forwards alternate ease-in-out;
+    width: 40px;
+    height: 40px;
+}
+@keyframes move {
+    0% {
+      offset-distance: 0%;
+    }
+    100% {
+      offset-distance: 100%;
+    }
+  }
