--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,10 @@
     width: 40px;
     height: 40px;
 }
+.inputStyle{
+    border-style: inset;
+    border-radius: 1em;
+}
 @keyframes move {
     0% {
       offset-distance: 0%;
